<resources>
    <string name="app_name">medik247</string>
    <string name="title_activity_major">Dashboard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_major_user_login">Pending Records</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_new_navigation_activitty">NewNavigationActivitty</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_landing_screen">LandingScreen</string>
    <string name="APIKEYMAPBOX">pk.eyJ1IjoidGFydW5hbmRyb2lkMDk0IiwiYSI6ImNqMmlyajZiZzAyN3UycXJ4OW1mZHAzM3gifQ.IPGP3TVpzlnczeJeSytzSQ</string>


    <!--loader-->
    <string name="Loader">Loading</string>

    <!--sign_in & Sign_up page-->

    <string name="Sing_in_e">Email</string>
    <string name="Sing_in_pass">Password</string>
    <string name="Sing_in_forget">Forgot Password</string>
    <string name="Sing_in_up">Sign Up</string>
    <string name="Sign_up_f_name">First Name</string>
    <string name="Sign_up_l_name">Last Name</string>
    <string name="Sign_up_confirm_pass">Confirm Password</string>


    <!--facebook id-->
    <string name="facebook_id">201237597037538</string>
    <string name="googleProjectid">530496450037</string>

    <!--dialog box-->
    <string name="dialog_msg">Welcome to Parker </string>
    <string name="view">View Tutorial </string>
    <string name="find">Find Parking </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <array name="map_point_type">
        <item>Distance</item>
        <item>Price</item>
        <item>Availability</item>
        <item>Rating</item>
        <item>Name</item>
    </array>


</resources>
